--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,14 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.54
+
+    - name Lint
+      run: make lint
+
     - name: Test
       run: go test -v ./...
 
