--- a/.golangci.yml
+++ b/.golangci.yml
@@ -129,20 +129,20 @@ linters:
 
   # Enable presets.
   # https://golangci-lint.run/usage/linters
-  presets:
-    - bugs
-    - comment
-    - complexity
-    - error
-    - format
-    - import
-    - metalinter
-    - module
-    - performance
-    - sql
-    - style
-    - test
-    - unused
+  # presets:
+  #   - bugs
+  #   - comment
+  #   - complexity
+  #   - error
+  #   - format
+  #   - import
+  #   - metalinter
+  #   - module
+  #   - performance
+  #   - sql
+  #   - style
+  #   - test
+  #   - unused
 
   # Run only fast linters from enabled linters set (first run won't be fast)
   # Default: false
