--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,20 @@ on:
     branches: [ "main" ]
 
 jobs:
-
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: "1.21"
+      - uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+    - name: Run Lint
+      run: make lint
   build:
     runs-on: ubuntu-latest
     steps:
@@ -25,9 +38,6 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.54
-
-    - name: Lint
-      run: make lint
 
     - name: Test
       run: go test -v ./...
