--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,16 @@ on:
     branches: [ "main" ]
 
 jobs:
+  splc-diff:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: sqlc-dev/setup-sqlc@v3
+      with:
+        sqlc-version: '1.22.0'
+    - run: sqlc diff
   lint:
+    needs: [sqlc-diff]
     name: lint
     runs-on: ubuntu-latest
     steps:
