--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  splc-diff:
+  sqlc-diff:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
