--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54.2
+          args: --config=.golangci.yml
   test:
     runs-on: ubuntu-latest
     needs: [lint]
