--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,10 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "1.21"
-      - uses: actions/checkout@v3
+      - name: go mod tidy
+        run: |
+          go mod tidy
+          git diff --exit-code -- go.mod go.sum
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
