--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  GO_VERSION: "1.21"
+
 jobs:
   sqlc-diff:
     runs-on: ubuntu-latest
@@ -26,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.21"
+          go-version: {{ env.GO_VERSION }}
       - name: go mod tidy
         run: |
           go mod tidy
