--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: {{ env.GO_VERSION }}
+          go-version: ${{env.GO_VERSION}}
       - name: go mod tidy
         run: |
           go mod tidy
