--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 env:
-  GO_VERSION: "1.21"
+  GO_VERSION: "1.21.3"
 
 jobs:
   sqlc-diff:
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: ${{env.GO_VERSION}}
       - name: go mod tidy
         run: |
           go mod tidy
